# Flamingo

./: Flamingo.db  README.md  setup.cfg
flamingo/: __main__.py  assets.py  authentication.py
flamingo/database/: data_communication.py  migrations.py
