[metadata]
name = Flamingo
version = 0.0.0
description = A password manager, lovingly ordered by my girlfriend. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AJai13/Flamingo
author = AJ
author_email = aj_mz@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires = 
    kivy==2.1.0
    cryptography==37.0.4
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    flamingo = flamingo.__main__:main

[bdist_wheel]
universal = True